# walrus

./: .gitignore  .gitmodules  .travis.yml  README.md  cloc.sh
bootloader/: BootloaderAPI.d  BootloaderCDC.c  (+8 more)
calf_teensy_hw/: CMakeLists.txt  package.xml
calf_teensy_hw/include/: calf_base_hw.h  calf_teensy_interface.h  pwm_effort_channel.h
calf_teensy_hw/launch/: robot.launch
calf_teensy_hw/src/: calf_base_hw_node.cpp  calf_teensy_test.cpp
multi_usb_cam/: CMakeLists.txt  example.launch  package.xml
multi_usb_cam/include/multi_usb_cam/: multi_usb_cam.h
multi_usb_cam/src/: multi_usb_cam.cpp  multi_usb_cam_node.cpp
oryx_arm/: CMakeLists.txt  package.xml
oryx_arm/config/: oryx_arm_epos_motors.yaml
oryx_arm/launch/: arm.launch
position_effort_controller/: CMakeLists.txt  package.xml  position_effort_controller_plugins.xml
position_effort_controller/include/position_effort_controller/: position_effort_controller.h
position_effort_controller/msg/: PositionEffortCommand.msg  PositionEffortCommandStamped.msg
position_effort_controller/src/: position_effort_controller.cpp
ubiquiti_bullet/: CMakeLists.txt  package.xml
ubiquiti_bullet/launch/: bullet_test.launch
ubiquiti_bullet/scripts/: bullet_monitor.py
walrus/: CMakeLists.txt  package.xml
walrus_base_hw/: CMakeLists.txt  package.xml
walrus_base_hw/config/: drive_epos_motor.yaml  epos_motors.yaml
walrus_base_hw/include/walrus_base_hw/: realtime_rate.h  util.h  walrus_base_robot.h  walrus_robot_base.h
walrus_base_hw/launch/: walrus_base_hw.launch
walrus_base_hw/src/: epos_hw_node.cpp  walrus_base_epos_hw_node.cpp  walrus_base_hw_node.cpp  walrus_base_robot.cpp  walrus_robot_base.cpp
walrus_beaglebone_hw/: CMakeLists.txt  package.xml
walrus_beaglebone_hw/include/: pwm_effort_channel.h  servo_pin.h  walrus_base_hw.h  walrus_teensy_interface.h
walrus_beaglebone_hw/launch/: robot.launch
walrus_beaglebone_hw/src/: servo_pin.cpp  walrus_base_hw_node.cpp  walrus_beaglebone_hw_node.cpp  walrus_teensy_test.cpp
walrus_beaglebone_hw/udev/: 49-teensy_2_0.rules
walrus_boomboard_driver/: CMakeLists.txt  package.xml
walrus_boomboard_driver/config/: boomboard_param.yaml
walrus_boomboard_driver/include/walrus_boomboard_driver/: walrus_boomboard_driver.h  walrus_boomboard_robot.h
walrus_boomboard_driver/src/: walrus_boomboard_driver.h
walrus_boomboard_driver/src/walrus_boomboard_driver/: walrus_boomboard_driver.cpp  walrus_boomboard_node.cpp  walrus_boomboard_robot.cpp
walrus_bringup/: CMakeLists.txt  package.xml
walrus_bringup/config/: oryx_arm_epos_motors.yaml
walrus_bringup/launch/: beaglebone.launch  common.launch.xml  gazebo.launch  robot.launch  walrus_beaglebone.launch  walrus_gazebo.launch
walrus_bringup/launch/includes/: common.launch.xml  computer_monitor.launch.xml  description.launch.xml  oryx_arm.launch.xml
walrus_control/: CMakeLists.txt  package.xml
walrus_control/config/: walrus_control.yaml  walrus_control_base.yaml  walrus_control_base_gazebo.yaml  walrus_control_base_robot.yaml  walrus_control_boom.yaml  walrus_control_boom_gazebo.yaml  walrus_control_boom_robot.yaml  walrus_control_gazebo.yaml  walrus_control_robot.yaml  walrus_raw_control.yaml
walrus_control/launch/: walrus_control.launch  walrus_raw_control.launch
walrus_control/scripts/: test_bounce.py
walrus_de2i_driver/: CMakeLists.txt  package.xml
walrus_de2i_driver/launch/: sprayer.launch
walrus_de2i_driver/src/: walrus_de2i_driver_node.cpp
walrus_description/: CMakeLists.txt  package.xml
walrus_description/launch/: description.launch  view_model.launch  walrus_base.launch
walrus_description/meshes/: left_center_tread.stl  pod.stl  right_center_tread.stl
walrus_description/robots/: walrus.urdf.xacro
walrus_description/rviz/: model.rviz
walrus_description/urdf/: base.urdf.xacro  boom.urdf.xacro  center_tread.urdf.xacro  kinectv2.urdf.xacro  oryx_arm.urdf.xacro  pod.urdf.xacro  simple_camera.urdf.xacro  simple_transform.urdf.xacro  walrus.urdf.xacro
walrus_diagnostics/: CMakeLists.txt  package.xml
walrus_diagnostics/config/: analyzers.yaml
walrus_diagnostics/launch/: diagnostics.launch
walrus_diagnostics/scripts/: host_resource_monitor.py
walrus_drive_controller/: CMakeLists.txt  package.xml  walrus_drive_controller_plugins.xml
walrus_drive_controller/include/walrus_drive_controller/: odometry.h  speed_limiter.h  walrus_drive_controller.h
walrus_drive_controller/msg/: TankDriveCommand.msg  TankDriveCommandStamped.msg
walrus_drive_controller/src/: odometry.cpp  speed_limiter.cpp  walrus_drive_controller.cpp
walrus_gazebo/: CMakeLists.txt  package.xml  walrus_epos_hw_sim_plugins.xml  walrus_hw_sim_plugins.xml
walrus_gazebo/launch/: gazebo.launch  spawn_gazebo.launch  walrus_base_world.launch
walrus_gazebo/src/: walrus_base_epos_hw_sim.cpp  walrus_base_hw_sim.cpp  walrus_boom_hw_sim.cpp  walrus_epos_hw_sim.cpp  walrus_hw_sim.cpp
walrus_gazebo/worlds/: construction.world  empty.world
walrus_interface_controller/: CMakeLists.txt  package.xml
walrus_interface_controller/launch/: interfaces.launch  joystick_controller.launch.xml  local_joy.launch  web_interface.launch
walrus_interface_controller/msg/: InterfaceControllerState.msg
walrus_interface_controller/src/: interface_controller_node.cpp  interface_manager_node.cpp
walrus_interface_controller_msgs/: CMakeLists.txt  package.xml
walrus_interface_controller_msgs/msg/: InterfaceControllerState.msg
walrus_joystick_controller/: CMakeLists.txt  package.xml
walrus_joystick_controller/include/walrus_joystick_controller/: joystick_controller.h
walrus_joystick_controller/msg/: JoystickControllerState.msg
walrus_joystick_controller/src/: joystick_controller.cpp  joystick_controller_node.cpp
walrus_mainboard_driver/: CMakeLists.txt  package.xml
walrus_mainboard_driver/config/: mainboard_param.yaml
walrus_mainboard_driver/include/walrus_mainboard_driver/: mainboard_driver.h  walrus_mainboard_driver.h  walrus_mainboard_robot.h
walrus_mainboard_driver/src/: mainboard_driver.cpp  walrus_mainboard_driver.cpp
(+378 files in other folders)
