<?xml version="1.0"?>
<package>
  <name>oryx_arm</name>
  <version>0.0.0</version>
  <description>The oryx_arm package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
