<?xml version="1.0"?>
<package>
  <name>position_effort_controller</name>
  <version>0.0.0</version>
  <description>A controller that allows both position and effort control.</description>

  <maintainer email="bjeccles@wpi.edu">Brian Eccles</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="bjeccles@wpi.edu">Brian Eccles</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
    <controller_interface plugin="${prefix}/position_effort_controller_plugins.xml"/>
  </export>
</package>
