<?xml version="1.0"?>
<package>
  <name>walrus</name>
  <version>0.0.0</version>
  <description>A metapackage for all WALRUS Rover packages</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>walrus_bringup</run_depend>
  <run_depend>walrus_description</run_depend>
  <run_depend>walrus_gazebo</run_depend>
  <run_depend>walrus_control</run_depend>
  <run_depend>walrus_base_hw</run_depend>
  <run_depend>walrus_diagnostics</run_depend>

  <export>
    <metapackage />
  </export>
</package>
