<?xml version="1.0"?>
<package>
  <name>walrus_base_hw</name>
  <version>0.0.0</version>
  <description>The ros_control robot hardware for the WALRUS Rover</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>epos_hardware</build_depend>
  <build_depend>rosserial_server</build_depend>
  <build_depend>walrus_mainboard_driver</build_depend>
  <build_depend>walrus_boomboard_driver</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>epos_hardware</run_depend>
  <run_depend>rosserial_server</run_depend>
  <run_depend>walrus_mainboard_driver</run_depend>
  <run_depend>walrus_boomboard_driver</run_depend>

  <export>
  </export>
</package>
