<?xml version="1.0"?>
<package>
  <name>walrus_boomboard_driver</name>
  <version>0.0.0</version>
  <description>The walrus_boomboard_driver package</description>

    <maintainer email="bjeccles@wpi.edu">Brian Eccles</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="bjeccles@wpi.edu">Brian Eccles</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>walrus_firmware_msgs</build_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>walrus_firmware_msgs</run_depend>

  <export>

  </export>
</package>