<?xml version="1.0"?>
<package>
  <name>walrus_bringup</name>
  <version>0.0.0</version>
  <description>A collection of launch files for the WALRUS Rover</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>walrus_description</run_depend>
  <run_depend>walrus_gazebo</run_depend>
  <run_depend>walrus_control</run_depend>
  <run_depend>walrus_base_hw</run_depend>
  <run_depend>walrus_diagnostics</run_depend>
  <run_depend>libsensors_monitor</run_depend>
  <run_depend>orientus_driver</run_depend>

  <export>
  </export>
</package>
