<?xml version="1.0"?>
<package>
  <name>walrus_control</name>
  <version>0.0.0</version>
  <description>The common controllers and controller setup used for the WALRUS Rover</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>velocity_controllers</run_depend>

  <export>
  </export>
</package>
