<?xml version="1.0"?>
<package>
  <name>walrus_de2i_driver</name>
  <version>0.0.0</version>
  <description>The walrus_de2i_driver package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
