<?xml version="1.0"?>
<package>
  <name>walrus_interface_controller</name>
  <version>0.0.0</version>
  <description>The walrus_interface_controller package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>walrus_joystick_controller</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>walrus_web_server</run_depend>
  <run_depend>walrus_joystick_controller</run_depend>

  <export>
  </export>
</package>
