<?xml version="1.0"?>
<package>
  <name>walrus_interface_controller_msgs</name>
  <version>0.0.0</version>
  <description>The walrus_interface_controller_msgs package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
